[package]
name = "live_config_updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
actix-web = "4.0"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = { version = "2.0.0-4.0" }
slog-term = "2.8.0"


